# codrex

./: NOTICE  README.md  TODO.md
codex-cli/: package.json
codex-rs/: Cargo.toml
codex-rs/.cargo/: config.toml
codex-rs/app-server-client/src/: dynamic_tools.rs  lib.rs  remote.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: lib.rs  login.rs  main.rs  orchestrate_cmd.rs  provider_login.rs
codex-rs/cli/tests/: debug_clear_memories.rs  debug_models.rs  execpolicy.rs  features.rs  login.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_upgrade.rs  mcp_add_remove.rs  mcp_list.rs  multi_provider_auth.rs
codex-rs/config/src/: config_toml.rs  types.rs
codex-rs/config/src/thread_config/: remote.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/src/: apply_patch.rs  client.rs  exec.rs  lib.rs  minimax_adapter.rs  minimax_delegate.rs  sensitive_output.rs  strict_delegation.rs
codex-rs/core/src/minimax_delegate/: context_packer.rs  git_status.rs  response_parser.rs  response_parser_tests.rs
codex-rs/core/src/session/: mod.rs
codex-rs/core/src/state/: turn.rs
codex-rs/core/src/tasks/: mod.rs
codex-rs/core/src/tools/handlers/: apply_patch.rs  apply_patch_tests.rs  dynamic.rs  shell.rs  shell_tests.rs  unified_exec.rs
codex-rs/core/src/unified_exec/: async_watcher.rs  process_manager.rs
codex-rs/core/tests/common/: test_codex.rs  test_codex_exec.rs
codex-rs/core/tests/suite/: cli_stream.rs  minimax_delegate.rs  mod.rs
codex-rs/exec/src/: cli.rs  cli_tests.rs  lib.rs  lib_tests.rs
codex-rs/exec/tests/suite/: delegate_to_minimax.rs  mod.rs  strict_delegation.rs  strict_delegation_e2e.rs
codex-rs/login/src/: device_code_auth.rs  lib.rs
codex-rs/login/src/auth/: manager.rs  storage.rs  storage_tests.rs
codex-rs/minimax/: Cargo.toml
codex-rs/minimax/examples/: wire_probe.rs
codex-rs/minimax/src/: bridge.rs  client.rs  lib.rs  streaming.rs  think_parser.rs  types.rs
codex-rs/minimax/tests/: bridge.rs  chat_completions.rs  live_smoke.rs  streaming.rs  tool_calling.rs
codex-rs/model-provider-info/src/: lib.rs
codex-rs/orchestrator/: Cargo.toml
codex-rs/orchestrator/src/: audit.rs  context.rs  decision.rs  dispatch.rs  error.rs  lib.rs  log.rs  runner.rs  spec.rs  traits.rs
codex-rs/orchestrator/src/classifier/: llm.rs  mod.rs  tests.rs
codex-rs/orchestrator/tests/: e2e.rs
codex-rs/rmcp-client/tests/: streamable_http_test_support.rs
codex-rs/tui/src/: app_server_session.rs  chatwidget.rs  history_cell.rs  lib.rs
codex-rs/tui/src/app/: app_server_adapter.rs  app_server_requests.rs
codex-rs/tui/src/onboarding/: welcome.rs
codex-rs/tui/src/snapshots/: codex_tui__history_cell__tests__dynamic_tool_call_clarify_snapshot.snap  codex_tui__history_cell__tests__dynamic_tool_call_clarify_snapshot.snap.new  codex_tui__history_cell__tests__dynamic_tool_call_completed_snapshot.snap  codex_tui__history_cell__tests__dynamic_tool_call_running_snapshot.snap
codex-rs/tui/tests/suite/: model_availability_nux.rs  no_panic_on_startup.rs  resize_reflow.rs
codex-rs/utils/cli/src/: shared_options.rs
codex-rs/utils/home-dir/src/: lib.rs
docs/: auth.md  development.md  minimax.md  orchestrator.md
scripts/: start-codex-exec.sh  test-remote-env.sh
