[package]
name = "codex-minimax"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_minimax"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
codex-api = { workspace = true }
codex-model-provider-info = { workspace = true }
codex-protocol = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-test = { workspace = true }
wiremock = { workspace = true }

[[example]]
name = "wire_probe"
path = "examples/wire_probe.rs"

[lints]
workspace = true
