[package]
name = "codex-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_orchestrator"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
