[package]
name = "codex-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_orchestrator"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
codex-api = { workspace = true }
codex-config = { workspace = true }
codex-login = { workspace = true }
codex-minimax = { workspace = true }
codex-model-provider = { workspace = true }
codex-model-provider-info = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-home-dir = { workspace = true }
futures = { workspace = true }
lru = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing-test = { workspace = true, features = ["no-env-filter"] }
wiremock = { workspace = true }

[lints]
workspace = true
